--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>now.. there are no mistakes in this code</h1>
     <script src="join.js"></script>
 </body>
 </html>
